--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.projectlombok:lombok')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('com.h2database:h2')
-    compile('org.springframework.boot:spring-boot-starter-mustache')
+    compile('com.h2database:h2')                                            // h2
+    compile('org.springframework.boot:spring-boot-starter-mustache')        // mustache 의존성 추가
+    compile('org.springframework.boot:spring-boot-starter-oauth2-client')   // 스프링 시큐리티 관련 의존성 for client
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
